# CUDA-maskedConvolutions

./: .gitignore  CMakeLists.txt  README.md  main.cu
apps/: deviceQuery.cu  profile_mConv1D.cu
python/: 3d_conv.py
src/: dotProduct.cu  dot_product.cu  mConv.hpp  mConv1D.cu  mConv3D.cu  masked_conv.cu  masked_conv.hpp
tests/: CMakeLists.txt  test_mConv1D.cu  test_mConv1D_cpu.cpp  test_mConv3D.cu  test_masked_conv.cu  tests.cu
